Fix `Overflow` contents
 + Added "overflow" property to tackle the content keeps on growing.
 + Added "border" rules for the ".signs-container".
 + Increased the "gap" between the buttons.

Now, the overflow was set to "hidden" on the ".wrapper-page". So, the content won't get bigger (or) smaller.
As the "display h2" is set to "scroll", it can be scrolled to view large numbers.
The "display: flex" rule makes the last entered content as focused with "flex-direction" rule.

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ body {
   flex-basis: 100%;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  overflow: hidden;
 }
 
 .wrapper-page>* {
@@ -66,6 +67,20 @@ body {
   font-size: 1.5rem;
   padding: 10px;
   border: ridge 10px hsl(0, 0%, 0%);
+  overflow: hidden;
+}
+
+.display h2 {
+  overflow: scroll;
+  height: 95px;
+  display: flex;
+  flex-direction: column-reverse;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.display h2::-webkit-scrollbar {
+  display: none;
 }
 
 /**------ WRAPPER'S CONTENTS [MAIN] ------**/
@@ -85,7 +100,7 @@ body {
   background-color: hsl(0, 0%, 0%);
   width: 95%;
   margin: 0 auto;
-  border: solid .2rem hsl(0, 0%, 0%);
+  border: ridge .5rem hsl(0, 0%, 0%);
   gap: .2rem;
 }
 
@@ -124,7 +139,7 @@ body {
 .numbers-container .rows,
 .column,
 .column div {
-  gap: .2rem;
+  gap: .5rem;
 }
 
 .numbers-container .rows .column {
@@ -138,7 +153,7 @@ body {
 .signs-column,
 .rows.signs,
 .signs-container .rows {
-  gap: .2rem;
+  gap: .5rem;
 }
 
 .signs-container,
@@ -164,6 +179,7 @@ body {
 
 .signs-container {
   flex-basis: 30%;
+  border-left: ridge .5rem hsl(0, 0%, 0%);
 }
 
 /**------ WRAPPER'S CONTENTS [FOOTER] ------**/
